# melody.app

./: .editorconfig  .gitignore
melody/app/: build.py  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
melody/app/public/: index.html
melody/app/public/static/css/: output.css
melody/app/src/: App.vue  main.js  main.ts  util.js  utils.js  utils.ts
melody/app/src/components/: AppLayout.vue  LoginForm.vue  MenuCollection.vue  PlayerControls.vue  SideBar.vue  SmallMenu.vue  WindowControls.vue
melody/app/src/models/: base.ts  createdAt.ts  entity.ts  enums.ts  playerSettings.ts  token.ts  user.ts  userSettings.ts
melody/app/src/router/: index.js  index.ts
melody/app/src/store/: index.js  utils.js  utils.ts
melody/app/src/store/modules/: self.ts  token.ts  users.js
melody/app/src/views/: HomeView.vue  LibraryView.vue  LogoutView.vue  PlaylistView.vue  SearchView.vue  SettingsView.vue
melody/app/static/css/: output.css
melody/app/tauri/: Cargo.toml  tauri.conf.json
melody/app/tauri/src/: main.rs
